@@ -2,6 +2,14 @@
 
         Reviewed by Maciej Stachowiak.
         
+        Removed some completely unused ScopeChain member functions.
+
+        SunSpider reports no change.
+
+2008-04-21  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Maciej Stachowiak.
+        
         Avoid creating unnecessary ScopeChain objects, to reduce refcount churn.
 
         SunSpider reports no change.
